--- a/amazon-clone/src/compnents/Login-Components/Register/Register.css
+++ b/amazon-clone/src/compnents/Login-Components/Register/Register.css
@@ -1,12 +1,31 @@
-.login {
+.register_page {
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 100vh;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
 }
-.login_left {
+.register_page_info {
+  text-align: justify;
+  padding-left: 30px;
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  font-family: "Poppins", sans-serif;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  gap: 30px;
+}
+.register_page_header {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+}
+.info_body {
+  width: 100%;
+}
+.register_container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,25 +33,14 @@
   width: 100%;
   height: 100%;
 }
-.login_right {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-}
-.login_form {
+.register_container form {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   width: 50%;
   height: 50%;
 }
-.login_header {
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
-}
+
 .input_style {
   position: relative;
   border: none;
@@ -76,8 +84,7 @@
   color: #999;
   font-style: normal;
 }
-.login_btn,
-.register_btn {
+.signIn_btn {
   font-size: 25px;
   padding: 8px;
   width: 150px;
@@ -90,27 +97,4 @@
   font-family: "Poppins", sans-serif;
   border: none;
   cursor: pointer;
-}
-h5 {
-  text-decoration: underline;
-  cursor: pointer;
-}
-.register_header {
-  margin-top: 18px;
-  font-family: "Poppins", sans-serif;
-}
-.register_form {
-  display: flex;
-  flex-direction: column;
-  width: 50%;
-  height: 40%;
-}
-.register_info {
-  align-items: flex-start;
-  font-size: 20px;
-  margin-bottom: 5px;
-  font-family: "Poppins", sans-serif;
-}
-.register_btn {
-  width: 250px;
 }
